--- a/interest.html
+++ b/interest.html
@@ -131,8 +131,8 @@
 
   <body class="bg-birds">
     <div class="topnav" id="myTopnav">
-      <a href="index.html" class="active">Home</a>
-      <a href="interest.html">Interest</a>
+      <a href="index.html">Home</a>
+      <a href="interest.html" class="active">Interest</a>
       <a href="#contact">Contact</a>
       <a href="#about">About</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
